--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 
             <h3>1. Amyloidogenicity of SARS-CoV-2</h3>
             <div class="project-container">
-                <img src="photos/amyloid.png" alt="Amyloid Analysis" class="project-pic">
+                <img src="photos/amyloid.png" alt="Amyloid Analysis" class="project-img">
                 <p>Understanding the persistence of viral peptides post-infection is crucial for assessing long-term immune responses. In this project, we aimed to investigate whether xenoAMP regions within the SARS-CoV-2 protein sequences overlap with amyloidogenic regions. If such an overlap exists, it could suggest that xenoAMPs persist due to amyloid-like aggregation, resisting degradation and allowing them to circulate in the body long after infection.</p>
                 <p>To explore this, I computationally analyzed SARS-CoV-2 protein sequences. I applied a Support Vector Machine (SVM) classifier to identify antimicrobial peptide (AMP)-like sequences and used the WALTZ algorithm to predict amyloidogenic segments. The results provided insights into the potential role of amyloid-like aggregation in the persistence of viral peptides. This is still an ongoing project.</p>
             </div>
