--- a/personal.html
+++ b/personal.html
@@ -18,7 +18,7 @@
         <p>
             I grew up in Chengdu, Sichuan, China—a city famous for its rich history. The city itself dates back to 367 BC, and my high school recently celebrated its 2,160th anniversary, founded in 141 BC. 
             Chengdu is also home to the world-famous Panda Research Center, where hundreds of pandas are cared for, and Chengdu’s hotpot is an iconic part of its culinary heritage. 
-            If you're in Los Angeles and craving authentic Sichuan hotpot, I recommend trying <a href="https://en.wikipedia.org/wiki/Haidilao">海底捞 (Haidilao)</a>—they have locations in many major cities in the US, though Chengdu boasts even better hotpot options.
+            If you're in Los Angeles and craving authentic Sichuan hotpot, I recommend trying <a href="https://en.wikipedia.org/wiki/Haidilao" target="_blank">海底捞 (Haidilao)</a>—they have locations in many major cities in the US, though Chengdu boasts even better hotpot options.
         </p>
         <p>
             Football (soccer) has been one of my lifelong passions. My deep-rooted love for Chelsea Football Club began in 2014 after visiting Stamford Bridge for the first time. 
@@ -28,7 +28,7 @@
         </p>
         <p>
             Movies have always captivated me, particularly the works of
-            <a href="https://en.wikipedia.org/wiki/Denis_Villeneuve">Denis Villeneuve</a> and <a href="https://en.wikipedia.org/wiki/Christopher_Nolan">Christopher Nolan</a>
+            <a href="https://en.wikipedia.org/wiki/Denis_Villeneuve" target="_blank">Denis Villeneuve</a> and <a href="https://en.wikipedia.org/wiki/Christopher_Nolan" target="_blank">Christopher Nolan</a>
             for their masterful storytelling and stunning visuals. 
             I also have a passion for photography—while I used to bring my Fujifilm XPro3 on every trip, 
             I’ve recently embraced the convenience of phone photography, 
