--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 </head>
 <body>
     <section class="intro">
-        <h1>Hi, welcome to my homepage!</h1>
-        <p>My name is 孙文宏 (Wenhong Sun), and I also go by <b>Tony Sun</b>. Feel free to explore my 
+        <h1>Hi, welcome!</h1>
+        <p>My name is 孙文宏 (Wenhong Sun), and I also go by <b>Tony</b>.</p>
+        <p>Feel free to explore my 
             <a href="academic.html">academic and professional background</a> 
             or 
             <a href="personal.html">personal background</a>.
         </p>
         <p>
             <span class="small-text">
-            Below are some of the photographs I've taken over the years, and I hope you enjoy them!
+            Below are some photographs I've taken over the years. I hope you enjoy them!
             </span>
         </p>
     </section>
