--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
 
         <section class="project">
             <h2>Research Projects</h2>
-            <p>I am an undergraduate researcher at the Wong Lab at UCLA. My research focuses on leveraging computational and machine learning techniques to analyze complex biological data to uncover meaningful patterns. Below are the two main projects that I have worked on.</p>
+            <p>I am an undergraduate researcher at the Wong Lab at UCLA. My research focuses on leveraging computational and machine learning techniques to analyze complex biological data and uncover meaningful patterns. Here are the two main projects.</p>
 
             <h3>1. Amyloidogenicity of SARS-CoV-2</h3>
             <div class="project-container">
