--- a/coursework.html
+++ b/coursework.html
@@ -23,9 +23,11 @@
                 <li>Math 131A: Analysis I</li>
                 <li>Math 131B: Analysis II</li>
                 <li>Math 132: Complex Analysis for Applications</li>
+                <li>Math 136: Partial Differential Equations (Spring 2025)</li>
                 <li>Math 151A: Applied Numerical Methods</li>
+                <li>Math 156: Machine Learning (Spring 2025)</li>
                 <li>Math 164: Optimization</li>
-                <li>Math 171: Stochastic Processes <em>(Winter 2025)</em></li>
+                <li>Math 171: Stochastic Processes </li>
                 <li>Math 174E: Mathematics of Finance for Mathematics/Economics Students</li>
                 <li>Math 179: Advanced Topic in Financial Mathematics</li>
                 <li>Math 195: Community Internships in Mathematics Education</li>
@@ -108,6 +110,9 @@
                 <li>LING 1: Introduction to Study of Language</li>
                 <li>LBR STD 10: Introduction to Labor and Workplace Studies</li>
                 <li>CESC 50XP: Engaging Los Angeles</li>
+                <li>MUSCLG 68: Beatles</li>
+                <li>HNRS 50: Creating Your Roadmap</li>
+                <li>FRNCH 1: Elementary French</li>
             </ul>
         </section>
     </section>
