--- a/academic.html
+++ b/academic.html
@@ -27,8 +27,8 @@
             Gradually, I found myself drawn more to finance, where outcomes are objectively measured by profits and losses. 
             I am particularly interested in quantitative finance, 
             a field that merges financial analysis with advanced statistical and computational techniques. 
-            To meet the challenges of this rigorous field, I continuously refine my technical skills and expand my knowledge base through these 
-            <a href="coursework.html">coursework</a> and <a href="projects.html">projects</a>.
+            To meet the challenges of this rigorous field, I continuously refine my technical skills and expand my knowledge base through this 
+            <a href="coursework.html">coursework</a> and these <a href="projects.html">projects</a>.
         </p>
         
         <p>
